--- a/src/style.css
+++ b/src/style.css
@@ -1,43 +1,119 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: monospace;
-    font-size: 1.5rem;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: monospace;
+  font-size: 2.5vw;
 }
 
 #root {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(233, 233, 233);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(233, 233, 233);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-container {
-    width: 50%;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 41px 4px rgba(0,0,0,0.73);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
+  width: 50%;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 41px 4px rgba(0, 0, 0, 0.73);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
 }
 
 a {
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
-    transition: all 300ms;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  transition: all 300ms;
 }
 
 a:hover {
-    color: blue;
-    transform: scale(105%);
+  color: blue;
+  transform: scale(105%);
 }
 
 p {
-    margin: 2vw 0;
+  margin: 2vw 0;
+}
+
+.image-container {
+  margin-top: 2vw;
+  transition: all ease 300ms;
+}
+
+.image-container img {
+  width: 15vw;
+  border-radius: 50%;
+  border: 0.4vw solid rgb(0, 141, 151);
+}
+
+.image-container:hover {
+  transform: rotate(5deg) scale(102%);
+}
+
+.projects-container {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0px 0px 41px 4px rgba(0, 0, 0, 0.73);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.project-item {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 7vw 0;
+  box-shadow: 0px 0px 41px 4px rgba(0, 0, 0, 0.73);
+  border-radius: 5px;
+  transition: all ease 300ms;
+}
+
+.project-item:hover {
+  transform: scale(102%);
+}
+
+.project-link-to-application {
+  padding: 2vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.project-title {
+  font-size: 2.2vw;
+}
+
+.project-image img {
+  width: 30vw;
+}
+
+.line-break {
+  width: 80%;
+  height: 1px;
+  background-color: black;
+}
+
+.project-description {
+  margin: 0.5vw 5vw;
+}
+
+.project-description p {
+  font-size: 1vw;
+  font-style: italic;
+  text-align: justify;
+}
+
+.project-link {
+  font-size: 2vw;
 }
