--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 }
 
 #root {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgb(233, 233, 233);
   display: flex;
@@ -33,13 +33,20 @@ a {
   transition: all 300ms;
 }
 
-a:hover {
+.main-container a:hover, .project-link:hover {
   color: blue;
-  transform: scale(105%);
+  transform: scale(102%);
 }
 
 p {
   margin: 2vw 0;
+}
+
+.section-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .image-container {
@@ -48,7 +55,7 @@ p {
 }
 
 .image-container img {
-  width: 15vw;
+  width: 13vw;
   border-radius: 50%;
   border: 0.4vw solid rgb(0, 141, 151);
 }
@@ -57,13 +64,30 @@ p {
   transform: rotate(5deg) scale(102%);
 }
 
+@keyframes project-container-animation {
+  from { 
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .projects-container {
   width: 80%;
-  background-color: white;
-  box-shadow: 0px 0px 41px 4px rgba(0, 0, 0, 0.73);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  animation-name: project-container-animation;
+  opacity: 0;
+  animation-duration: 500ms;
+  animation-fill-mode: forwards;
+  animation-delay: 100ms;
+}
+
+.box-container {
+  display: flex;
   flex-direction: column;
 }
 
@@ -76,11 +100,6 @@ p {
   margin: 7vw 0;
   box-shadow: 0px 0px 41px 4px rgba(0, 0, 0, 0.73);
   border-radius: 5px;
-  transition: all ease 300ms;
-}
-
-.project-item:hover {
-  transform: scale(102%);
 }
 
 .project-link-to-application {
@@ -91,17 +110,25 @@ p {
 }
 
 .project-title {
+  margin-top: 2vw;
   font-size: 2.2vw;
 }
 
 .project-image img {
   width: 30vw;
+  border-radius: 20px;
+  transition: all 300ms;
+}
+
+.project-image img:hover {
+  transform: scale(102%);
 }
 
 .line-break {
   width: 80%;
   height: 1px;
   background-color: black;
+  margin: 1vw 0;
 }
 
 .project-description {
@@ -116,4 +143,12 @@ p {
 
 .project-link {
   font-size: 2vw;
+  transition: all 300ms;
+}
+
+.description-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1vw;
 }
